@@ -4,6 +4,7 @@ import com.neukrang.jybot.command.constraint.NoTarget;
 import com.neukrang.jybot.command.constraint.UserInChannel;
 import com.neukrang.jybot.command.skeleton.Category;
 import com.neukrang.jybot.command.skeleton.Command;
+import com.neukrang.jybot.command.skeleton.CommandInfo;
 import com.neukrang.jybot.musicplayer.PlayerManager;
 import lombok.RequiredArgsConstructor;
 import net.dv8tion.jda.api.entities.Guild;
@@ -12,9 +13,7 @@ import net.dv8tion.jda.api.events.message.guild.GuildMessageReceivedEvent;
 import net.dv8tion.jda.api.managers.AudioManager;
 import org.springframework.stereotype.Component;
 
-import javax.annotation.PostConstruct;
-import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Component
@@ -22,17 +21,14 @@ public class JoinCommand extends Command {
 
     private final PlayerManager playerManager;
 
-    @PostConstruct
     @Override
-    protected void init() {
-        commandName = "join";
-        category = Category.BOT;
-
-        helpMessage = "!join\n" + "음성채널에 봇을 참가시킵니다.";
-        constraintList = new ArrayList<>(Arrays.asList(
-                NoTarget.class,
-                UserInChannel.class
-        ));
+    protected CommandInfo createCommandInfo() {
+        return CommandInfo.builder()
+                .commandName("join")
+                .category(Category.BOT)
+                .helpMessage("!join\n" + "음성채널에 봇을 참가시킵니다.")
+                .constraintList(List.of(NoTarget.class, UserInChannel.class))
+                .build();
     }
 
     @Override
